Installing and configuring ef core

--- a/MoviesAPI/appsettings.Development.json
+++ b/MoviesAPI/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "frontend_url": "http://localhost:3000",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=MoviesAPI;Integrated Security=True"
   }
 }
